k8s/canary-deployment/2-canary-ingress-cookie.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-cookie: "shadow"
spec:
  rules:
  - host: echo-koenverburg.cloud.okteto.net
    http:
      paths:
      - path: /(.*)
        pathType: Exact
        backend:
          service:
            name: canary
            port:
              number: 80
