k8s/canary-deployment/4-canary-ingress-header.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "x-canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "true"
spec:
  rules:
  - host: echo-koenverburg.cloud.okteto.net
    http:
      paths:
      - path: /(.*)
        pathType: Exact
        backend:
          service:
            name: canary
            port:
              number: 80
